[project]
name = "owe-service"
version = "0.1.0"
description = "FastAPI backend for the OWE lead qualification challenge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135.3,<1.0.0",
  "uvicorn>=0.44.0,<1.0.0",
  "pydantic>=2.12.5,<3.0.0",
  "pydantic-settings>=2.13.1,<3.0.0",
  "httpx>=0.28.1,<1.0.0",
  "langchain-core>=1.2.27,<2.0.0",
  "langchain>=1.2.15,<2.0.0",
  "langchain-openai>=1.1.12,<2.0.0",
  "langgraph>=1.1.6,<2.0.0",
  "langsmith>=0.4.38,<1.0.0",
  "openai>=2.30.0",
  "PyJWT>=2.10.1,<3.0.0",
  "certifi>=2026.2.27",
  "cryptography>=46.0.0,<47.0.0",
  "psycopg2-binary>=2.9.11,<3.0.0",
  "sqlalchemy>=2.0.49,<3.0.0",
  "alembic>=1.18.4,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2,<10.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
